plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.10'
}
sourceCompatibility = 1.17
targetCompatibility = 1.17

group 'org.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

javafx {
    version = "17.0.2"
    modules = [ 'javafx.controls', 'javafx.media']

}
dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'


    implementation 'com.google.code.gson:gson:2.9.0'
    implementation 'org.xerial:sqlite-jdbc:3.36.0.3'
    implementation 'com.google.code.gson:gson:2.9.0'
    implementation group: 'org.apache.httpcomponents.client5', name: 'httpclient5', version: '5.0.3'
    implementation 'org.controlsfx:controlsfx:11.1.1'


    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
    testImplementation 'org.mockito:mockito-junit-jupiter:4.4.0'
    testImplementation 'org.mockito:mockito-inline:4.4.0'
    testImplementation 'org.mockito:mockito-core:4.4.0'
    testImplementation 'org.hamcrest:hamcrest:2.2'
}

run {
    jvmArgs = ['--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED']
}
application {
    mainClass = 'App'
}



tasks.named('test') {
    useJUnitPlatform()
}